fix(css): increase tag padding on mobile breakpoint

--- a/website/static/style.css
+++ b/website/static/style.css
@@ -1043,6 +1043,10 @@ th[data-sort].sort-asc::after {
   .tag-group {
     display: none;
   }
+
+  .tag {
+    padding: 0.5rem 0.85rem;
+  }
 }
 
 @media (max-width: 680px) {
